Fixed whitespace on the right in the responsive design

--- a/portfolio-app/src/App.scss
+++ b/portfolio-app/src/App.scss
@@ -162,10 +162,16 @@ h3 {
     .skills {
         width: 80%;
     }
+    .project-list {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 @media only screen and (max-width: 720px) {
     .me-card {
         display: block;
+        padding-left: 0.5em;
+        padding-right: 0.5em;
         div {
             display: block;
             margin-right: 0em;
@@ -176,6 +182,7 @@ h3 {
         }
         p {
             text-align: center;
+            font-size: 30px;
         }
         .iris-name {
             text-align: center;
